# relay-llm

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  enterprise.yml  provider.yml
.github/workflows/: bench.yml  ci.yml  contract.yml  refresh_catalog.yml  release.yml  scorecard.yml
bench/: README.md  test_microbench.py
bench/gateway_comparison/: cold_start.py  harness.py  mock_server.py  streaming.py
bench/gateway_comparison/clients/: litellm_client.py  raw_httpx.py  relay_client.py
docs/: contributing.md  index.md  quickstart.md
docs/api/: cache.md  config.md  mcp.md  relay.md  structured.md  tools.md
docs/concepts/: config.md  pricing.md  providers.md  routing.md
docs/features/: batch.md  caching.md  mcp.md  model-selection.md  reasoning.md  streaming.md  structured.md  tools.md
docs/production/: audit.md  guardrails.md  observability.md  redaction.md  security.md
docs/routing/: api-spec.md  usage.md
examples/: models.yaml  quickstart.py
scripts/: curated.json  refresh_catalog.py
src/relay/: __init__.py  _cli.py  audit.py  batch.py  cache.py  errors.py  guardrails.py  hub.py  observability.py  redaction.py  structured.py  tools.py  types.py
src/relay/_internal/: circuit_breaker.py  credentials.py  reasoning.py  router.py  schema_validate.py  transport.py
src/relay/catalog/: __init__.py  _loader.py  _pricing.py
src/relay/catalog/data/: models.json
src/relay/config/: __init__.py  _loader.py  _schema.py
src/relay/mcp/: __init__.py  _manager.py
src/relay/providers/: __init__.py  _base.py  _stub.py  anthropic.py  azure_openai.py  bedrock.py  cohere.py  google.py  openai_compat.py  openai_responses.py  vertex.py
src/relay/routing/: __init__.py  _errors.py  _protocol.py  _rule_based.py  _semantic.py
tests/contract/: README.md  conftest.py  test_live_anthropic.py  test_live_groq.py  test_live_openai.py
tests/unit/: test_audit.py  test_azure.py  test_batch.py  test_bedrock.py  test_cache.py  test_catalog.py  test_circuit_breaker.py  test_cli_compare.py  test_cohere.py  test_config.py  test_google.py  test_guardrails.py  test_live_pricing.py  test_mcp.py  test_observability.py  test_openai_compat.py  test_openai_responses.py  test_pricing.py  test_reasoning.py  test_redaction.py  test_router.py  test_security_pr5.py  test_security_pr6.py  test_security_pr8.py  test_security_v022.py  test_sse_invariants.py  test_streaming.py  test_structured.py  test_tool_compiler.py  test_types.py  test_vertex.py
tests/unit/routing/: test_hub_routing.py  test_rule_based.py  test_semantic.py
